--- a/web3-live-demo/src/index.css
+++ b/web3-live-demo/src/index.css
@@ -15,3 +15,11 @@ code {
 p {
   color: white;
 }
+
+#star-field {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
