--- a/web3-live-demo/src/dependencies/styles/card.css
+++ b/web3-live-demo/src/dependencies/styles/card.css
@@ -1,10 +1,10 @@
-/* .card {
+.card {
   position: relative;
   width: 300px;
   height: 420px;
   perspective: 1000px;
-  transition: transform 0.5s;
-  transform-style: preserve-3d;
+
+  /* transform-style: preserve-3d; */
   cursor: pointer;
 }
 
@@ -21,25 +21,20 @@
   backface-visibility: hidden;
 }
 
-.card-details {
+
+.glare {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  transform: rotateY(180deg);
-  background-color: #f7f7f7;
-  padding: 20px;
-  box-sizing: border-box;
-  text-align: center;
+  top: 50px;
+  left: 10px;
+  /* width: 100%;
+  height: 100%; */
+  width: 200px;
+  height: 200px;
+  background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.4) 0%, transparent 70%);
+  opacity: 0;
+  transition: opacity 0.3s;
 }
 
-.card-title {
-  font-size: 24px;
-  margin-top: 80px;
+.card:hover .glare {
+  opacity: 1;
 }
-
-.card-description {
-  margin-top: 20px;
-} */
