--- a/web3-live-demo/src/dependencies/styles/card.css
+++ b/web3-live-demo/src/dependencies/styles/card.css
@@ -9,7 +9,7 @@
 }
 
 .card:hover {
-  transform: rotateY(20deg);
+  /* transform: rotateY(20deg); */
 }
 
 .card-image {
@@ -24,17 +24,41 @@
 
 .glare {
   position: absolute;
-  top: 50px;
-  left: 10px;
+
   /* width: 100%;
   height: 100%; */
-  width: 200px;
-  height: 200px;
-  background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.4) 0%, transparent 70%);
+  width: 300px;
+  height: 300px;
+  background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.288) 0%, rgba(255, 255, 255, 0) 70%);
   opacity: 0;
   transition: opacity 0.3s;
 }
 
 .card:hover .glare {
+  opacity: 1;
+}
+
+.cosmos-glare {
+  position: absolute;
+  top: 50px;
+
+  /* width: 100%;
+  height: 100%; */
+  width: 300px;
+  height: 300px;
+
+  opacity: 0;
+  transition: opacity 0.3s;
+  pointer-events: none;
+  /* background: linear-gradient(135deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.1) 100%), url("../images/cosmos-bottom.png"); */
+  background:
+
+    linear-gradient(135deg,
+      hsl(53, 65%, 60%),
+      hsl(93, 56%, 50%),
+      hsl(176, 54%, 49%), 100%) url("../images/cosmos-bottom.png");
+}
+
+.card:hover .cosmos-glare {
   opacity: 1;
 }
