--- a/web3-live-demo/src/dependencies/styles/card.css
+++ b/web3-live-demo/src/dependencies/styles/card.css
@@ -1,15 +1,12 @@
 .card {
   position: relative;
-  width: 300px;
-  height: 420px;
+  /* width: 300px;
+  height: 420px; */
   perspective: 1000px;
-
+  width: 100%;
+  height: 30rem;
   /* transform-style: preserve-3d; */
   cursor: pointer;
-}
-
-.card:hover {
-  /* transform: rotateY(20deg); */
 }
 
 .card-image {
@@ -21,6 +18,22 @@
   backface-visibility: hidden;
 }
 
+.card.enlarged {
+  transform: scale(var(--hover-scale));
+  transition: 0.5s ease;
+  z-index: 2;
+  /*put this element in front of other cards */
+}
+
+.card.showcase {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(var(--showcase-scale));
+  transition: 0.5s ease;
+  z-index: 9999;
+  /*put this element in front of everything*/
+}
 
 .glare {
   position: absolute;
@@ -29,7 +42,7 @@
   height: 100%; */
   width: 300px;
   height: 300px;
-  background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.288) 0%, rgba(255, 255, 255, 0) 70%);
+  background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.459) 0%, rgba(255, 255, 255, 0) 70%);
   opacity: 0;
   transition: opacity 0.3s;
 }
