--- a/web3-live-demo/src/dependencies/styles/card.css
+++ b/web3-live-demo/src/dependencies/styles/card.css
@@ -2,77 +2,44 @@
   position: relative;
   /* width: 300px;
   height: 420px; */
-  perspective: 1000px;
   width: 100%;
   height: 30rem;
-  /* transform-style: preserve-3d; */
+  transform-style: preserve-3d;
+  transform: scale(1);
   cursor: pointer;
 }
 
 .card-image {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  object-fit: cover;
 }
 
-.card.enlarged {
-  transform: scale(var(--hover-scale));
-  transition: 0.25s ease;
-  z-index: 2;
-  /*put this element in front of other cards */
-}
-
-
-.card.showcase {
+/* .enlarged {
+  z-index: 1000;
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(var(--showcase-scale));
-  transition: 0.25s ease;
-  z-index: 9999;
-}
-
+  transform: translate(-50%, -50%) scale(2);
+  width: 400px !important;
+  height: 560px !important;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  transition: transform 0.3s, box-shadow 0.3s;
+} */
 
 .glare {
   position: absolute;
-
-  /* width: 100%;
-  height: 100%; */
+  pointer-events: none;
   width: 300px;
   height: 300px;
   background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.459) 0%, rgba(255, 255, 255, 0) 70%);
   opacity: 0;
   transition: opacity 0.3s;
+  transform: 0.3s;
 }
 
 .card:hover .glare {
-  opacity: 1;
-}
-
-.cosmos-glare {
-  position: absolute;
-  top: 50px;
-
-  /* width: 100%;
-  height: 100%; */
-  width: 300px;
-  height: 300px;
-
-  opacity: 0;
-  transition: opacity 0.3s;
-  pointer-events: none;
-  /* background: linear-gradient(135deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.1) 100%), url("../images/cosmos-bottom.png"); */
-  background:
-
-    linear-gradient(135deg,
-      hsl(53, 65%, 60%),
-      hsl(93, 56%, 50%),
-      hsl(176, 54%, 49%), 100%) url("../images/cosmos-bottom.png");
-}
-
-.card:hover .cosmos-glare {
   opacity: 1;
 }
